# dns-sinkhole

./: .gitignore  Dockerfile  README.md  dns-sinkhole-gen.py  dns-sinkhole_gen.py  pyproject.toml
lists/: blacklist.txt  whitelist.txt
