[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gleb Buzin", email = "qufiwefefwoyn@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "numpy>=1.22.3",
    "black>=22.3.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
